--- a/website/content/en/_index.html
+++ b/website/content/en/_index.html
@@ -2,7 +2,8 @@
 title = "Operator SDK"
 +++
 
-{{< blocks/cover title="Operator SDK" image_anchor="top" height="full" color="primary" >}}
+{{< blocks/cover image_anchor="top" height="min" color="primary" >}}
+<img src="https://github.com/operator-framework/operator-sdk/raw/master/doc/images/operator_logo_sdk_color.svg?sanitize=true" style="max-width:100%;" height="200px">
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -14,3 +15,10 @@ title = "Operator SDK"
 </div>
 {{< /blocks/cover >}}
 
+{{< blocks/lead height="auto" color="white" >}}
+This project is a component of the [Operator
+Framework](https://github.com/operator-framework), an open source toolkit to
+manage Kubernetes native applications, called Operators, in an effective,
+automated, and scalable way. Read more in the [introduction blog
+post](https://coreos.com/blog/introducing-operator-framework).
+{{< /blocks/lead >}}
