rm the index image for simplicity

--- a/website/content/en/_index.html
+++ b/website/content/en/_index.html
@@ -2,8 +2,7 @@
 title = "Operator SDK"
 +++
 
-{{< blocks/cover image_anchor="top" height="min" color="primary" >}}
-<img src="https://github.com/operator-framework/operator-sdk/raw/master/doc/images/operator_logo_sdk_color.svg?sanitize=true" style="max-width:100%;" height="200px">
+{{< blocks/cover title="Operator SDK" image_anchor="top" height="min" color="primary" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
