small improvement and TODO

--- a/website/content/en/_index.html
+++ b/website/content/en/_index.html
@@ -10,7 +10,11 @@ title = "Operator SDK"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/operator-framework/operator-sdk/">
 		Source <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">SDK for building Kubernetes applications. Provides high level APIs, useful abstractions, and project scaffolding.</p>
+	<p class="lead mt-5"><a href=https://coreos.com/operators/>Operators</a>
+		are used to manage complex stateful applications on top of Kubernetes. The
+		Operator SDK makes it easier by providing high level APIs, useful
+		abstractions, and project scaffolding.
+	</p>
 </div>
 {{< /blocks/cover >}}
 
