--- a/website/content/en/_index.html
+++ b/website/content/en/_index.html
@@ -2,18 +2,19 @@
 title = "Operator SDK"
 +++
 
-{{< blocks/cover title="Operator SDK" image_anchor="top" height="min" color="primary" >}}
+{{< blocks/cover image_anchor="top" height="min" color="primary" >}}
+<img src="https://github.com/operator-framework/operator-sdk/raw/master/doc/images/operator_logo_sdk_color.svg?sanitize=true" style="max-width:100%;" height="250px">
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		Learn More<i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/operator-framework/operator-sdk/">
 		Source <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5"><a href=https://coreos.com/operators/>Operators</a>
+	<p class="lead mt-5"><a href=https://coreos.com/operators/>Operators 🔗</a>
 		are used to manage complex stateful applications on top of Kubernetes. The
-		Operator SDK makes it easier by providing high level APIs, useful
-		abstractions, and project scaffolding.
+		Operator SDK makes it easier to create them by providing high level APIs,
+		useful abstractions, and project scaffolding.
 	</p>
 </div>
 {{< /blocks/cover >}}
