--- a/website/content/en/_index.html
+++ b/website/content/en/_index.html
@@ -18,6 +18,7 @@ title = "Operator SDK"
 </div>
 {{< /blocks/cover >}}
 
+	<div class="mx-auto">
 {{< blocks/lead height="auto" color="white" >}}
 This project is a component of the [Operator
 Framework](https://github.com/operator-framework), an open source toolkit to
